--- a/QSPGL/pom.xml
+++ b/QSPGL/pom.xml
@@ -30,11 +30,7 @@
 			<version>5.2.5</version>
 		</dependency>
 
-		<dependency>
-			<groupId>ayushisony</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -51,7 +47,7 @@
 				<version>3.4.0</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>group.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
